feat: added PostgresSQL settings in the application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=taskmanage-api
+
+# Configurações do PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanage
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Mostrar as instruções SQL no console
+spring.jpa.show-sql=true
+
+# Configuração do JPA
+spring.jpa.hibernate.ddl-auto=update
+
+
+
