feat: added swagger docs, task service and task controller with save and list methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=taskmanage-api
+server.port=8082
+
+#swagger
+springdoc.swagger-ui.path=/swagger-ui.html
 
 # Configurações do PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanage
