feat: added authenticate method and genarated token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8082
 #swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 
+#secret
+api.security.token.secret=${JWT_SECRET:my_secret_key}
 # Configurações do PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanage
 spring.datasource.username=postgres
