feat: added valid token and saved user logged in the task object

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ server.port=8082
 springdoc.swagger-ui.path=/swagger-ui.html
 
 #secret
-api.security.token.secret=${JWT_SECRET:my_secret_key}
-# Configurações do PostgreSQL
+api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanage
 spring.datasource.username=postgres
 spring.datasource.password=postgres
