chore: added custom claim to return user email on token and configured cors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 #secret
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+
+#cors
+frontend.url.cors=http://localhost:4200
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanage
 spring.datasource.username=postgres
 spring.datasource.password=postgres
